# dmucs

./: CMakeLists.txt  Readme.md  config.h.cmake  dmucs_msg.h  dmucs_resolve.cc
COSMIC/: CMakeLists.txt
COSMIC/HDR/: setproto.h  sockets.h
